--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import-normalize; /* bring in normalize.css styles */
 
 body {
+  background: linear-gradient(to bottom, #99f2c8, #1f4037);
+  height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -18,6 +20,6 @@ h1,
 h2,
 h3,
 p {
-  margin-left: 10px;
+  margin: 0;
   padding: 0;
 }
