--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import-normalize; /* bring in normalize.css styles */
 
 body {
-  background: linear-gradient(to bottom, #99f2c8, #1f4037);
+  background: linear-gradient(to bottom, #1f4037, #99f2c8);
   height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
